# keys

./: .pre-commit-config.yaml  README.md  codecov.yaml  pyproject.toml
.github/: testing.yaml
.github/workflow/: coverage.yaml  testing.yaml
.github/workflows/: coverage.yaml  tests.yaml
keys/: app.py  class.py  cli.py  tools.py
src/: cli.py
tests/: test_app.py  test_cli.py
